--- a/styles.css
+++ b/styles.css
@@ -26,10 +26,21 @@ header h1{
     background-color:rgb(66, 29, 3);
 }
 nav{
-    background-color: burlywood;
+    background-color: #F4F4F4;
     padding: 20px;
+    position: sticky;
+    top: 84px;
+}
+nav ul{
+    white-space: nowrap;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 nav li{
     width: 20%;
     display: inline-block;
+}
+nav li a{
+    color: black;
+    font-family: 'PT Sans', sans-serif;
 }
