--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,9 @@ nav{
     background-color: #F4F4F4;
     padding: 20px;
     position: sticky;
-    top: 38px;
+    top: 42px;
+    z-index: 1;
+    display: block;
 } /* sticky margin for navbar home/menu/about/contact/where */
 nav ul{
     white-space: nowrap;
@@ -51,7 +53,11 @@ nav li a{
 }
 .aboutUs{
     /* position:static; */
-    
+    /* padding-top: 40px; */
+    display: block;
+  /* position: relative; */
+    /* top: -120px;  */
+  /* visibility: hidden; */
 }
 main{
     max-width: 100%;
@@ -112,7 +118,7 @@ footer{
 }
 .coffeeImages{
     text-align: center;
-    margin: 80px 0;
+    margin: 0px 0;
 }
 .coffeeImages li{
     display: inline-block;
@@ -135,4 +141,28 @@ footer{
 }
 .contactUs h3{
     font-size: 48px;
+}
+.whereToFind{
+    max-width: 100%;
+    width: 1200px;
+    margin: 30px auto; 
+    /*for refill your mind/main tag*/
+    padding: 0 40px;
+    box-sizing: border-box;
+}
+.whereToFind h3{
+    font-size: 48px;
+}
+#map{
+    height: 300px;
+    /* width: 100px; */
+    /* position: sticky; */
+    /* z-index: -1; */
+    /* float: center; */
+}
+.grid-container{
+    display: grid;
+    grid-template-columns: auto auto auto;
+
+    padding: 10px;
 }
