--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,15 @@ body, ul, li, h1, h3{
     font-family: 'PT Sans', sans-serif;
 } /*affects margin on top coffee banner*/
 header{
-    /* background-color:rgb(122, 61, 17); */
     background-color:burlywood;
-    /* padding: 20px 0; */
-    text-align: center;
+    /* margin: 30px 0; */
+    /* padding: 0 40px; */
+    /* text-align: center;
     position: fixed;
     width: 100%;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 1; */
 }
 header h1{
     color: black;
@@ -20,6 +20,9 @@ header h1{
     display: inline-block;
     /* padding: 6px 12px;
     border-radius: 36px; */
+}
+.header-nav li{
+    display: inline;
 }
 .banner{
 
@@ -306,4 +309,10 @@ footer{
 }
 .customer-care{
     text-align: left;
+}
+.carousel-inner img{
+    max-width: 100%;
+    width:  100%;
+    height: 100%;
+    object-fit: cover;
 }
