--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,50 @@
-body, ul, li, h1, h3{
+/* body, ul, li, h1, h3{
     margin: 0;
     padding: 0;
     font-family: 'PT Sans', sans-serif;
-} /*affects margin on top coffee banner*/
+}  */
+/*affects margin on top coffee banner*/
 header{
     background-color:burlywood;
-    /* margin: 30px 0; */
-    /* padding: 0 40px; */
-    /* text-align: center;
-    position: fixed;
+    padding: 10px;
+    /* text-align: center; */
+    /* tentative center */
+    /* position: fixed; */
+    /* tentative */
     width: 100%;
+    /* z-index: 1; */
+    /* tentative */
     top: 0;
     left: 0;
-    z-index: 1; */
 }
-header h1{
-    color: black;
+/* .header-logo{
+    display: inline-block;
+    
+    margin-left: 10px;
+} */
+.header-title{
+    display: inline-block;
+}
+.header-title a:link{
+    text-decoration: none;
+}
+.header-title h3{
+    font-family: 'PT Sans', sans-serif;
+    /* padding: 6px 12px; */
+    padding-left: 12px;
+    padding-right: 12px;
+    display: inline;
+    /* margin-left: 70px; */
+}
+.header-nav{
     font-family: 'PT Sans', sans-serif;
     display: inline-block;
-    /* padding: 6px 12px;
-    border-radius: 36px; */
+    float: right;
+    font-size: 17px;
+    margin-right: 19px;
 }
-.header-nav li{
-    display: inline;
+.header-nav a{
+    margin-right: 20px;
 }
 .banner{
 
