--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-/* body, ul, li, h1, h3{
+body, ul, li, h1, h3{
     margin: 0;
     padding: 0;
     font-family: 'PT Sans', sans-serif;
-}  */
+} 
 /*affects margin on top coffee banner*/
 header{
     background-color:burlywood;
@@ -19,8 +19,6 @@ header{
 }
 /* .header-logo{
     display: inline-block;
-    
-    margin-left: 10px;
 } */
 .header-title{
     display: inline-block;
@@ -90,6 +88,7 @@ main{
     margin: 30px auto; /* for aboutus/main tag*/
     padding: 0 40px;
     box-sizing: border-box;
+    font-family: 'PT Sans', sans-serif;
 }
 article h3{
     font-size: 48px;
@@ -101,6 +100,7 @@ div.contactUs{
     margin: 30px auto; 
     padding: 0 40px;
     box-sizing: border-box;
+    font-family: 'PT Sans', sans-serif;
 }
 /* trial */
 
@@ -196,6 +196,7 @@ footer{
     /*for refill your mind/main tag*/
     padding: 0 40px;
     box-sizing: border-box;
+    font-family: 'PT Sans', sans-serif;
 }
 .contactUs h3{
     font-size: 48px;
@@ -207,6 +208,7 @@ footer{
     /*for refill your mind/main tag*/
     padding: 0 40px;
     box-sizing: border-box;
+    font-family: 'PT Sans', sans-serif;
 }
 .whereToFind h3{
     font-size: 48px;
