--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body, ul, li, h1, h3{
 /*affects margin on top coffee banner*/
 header{
     background-color:burlywood;
-    padding: 10px;
+    /* padding: 10px; */
     /* text-align: center; */
     /* tentative center */
     /* position: fixed; */
@@ -17,11 +17,12 @@ header{
     top: 0;
     left: 0;
 }
-/* .header-logo{
+.header-logo{
     display: inline-block;
-} */
+}
 .header-title{
     display: inline-block;
+    /* padding: 10px; */
 }
 .header-title a:link{
     text-decoration: none;
@@ -34,6 +35,27 @@ header{
     display: inline;
     /* margin-left: 70px; */
 }
+.header-title ul{
+    display: inline-block;
+    /* float: right; */
+}
+.header-title li{
+    display: inline-block;
+    /* float: right; */
+}
+.header-navigation{
+    display: inline-block;
+    
+    /* padding: 70px; */
+    /* margin-left: 100; */
+}
+.header-navigation  {
+    background-color: #burlywood;
+}
+.header-navigation a:hover{
+    background-color: #ddd;
+  color: black;
+}
 .header-nav{
     font-family: 'PT Sans', sans-serif;
     display: inline-block;
@@ -41,8 +63,11 @@ header{
     font-size: 17px;
     margin-right: 19px;
 }
+.header-nav li{
+    display: inline;
+}
 .header-nav a{
-    margin-right: 20px;
+    /* margin-right: 20px; */
 }
 .banner{
 
